--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ https://templatemo.com/tm-560-astro-motion
                         <a class="nav-link" href="#0" data-no="4">Alternate Life</a>
                         <div class="circle"></div>
                       </li>
-                      <li class="nav-item">
+                      <!-- <li class="nav-item">
                         <a class="nav-link" href="#0" data-no="5">Some Thoughts</a>
                         <div class="circle"></div>
-                      </li>
+                      </li> -->
                     </ul>
                   </div>
               </nav>
@@ -66,18 +66,21 @@ https://templatemo.com/tm-560-astro-motion
           <li class="px-3" data-page-no="1">
             <div class="page-left">
               <div class="d-flex page-width-1 position-relative tm-border-top tm-border-bottom-noline intro-container">
-                <div class="intro-left tm-bg-dark">
+                <div class="me-text tm-bg-dark">
                   <h2 class="mb-4">Hi! Welcome to my personal website</h2>
                   <p class="mb-4">
-                    I am Sophy Yue Wu.</p>
+                    I am Sophy Yue Wu.
+                    <a href="/Users/administrator/Documents/GitHub/ak2325.github.io/assets/WU_Yue_CV.pdf"> [CV] </a>
+                  </p>
                   <p class="mb-4">
                     I am a radar scientist with an Earth System Science background.</p>
                   <p class="mb-0">
-                    I am currently a PhD candidate at the University of Texas at Austin, expected to graduate by May 2023.</p>
+                    I am currently a PhD candidate in 
+                    <a href="http://sites.utexas.edu/annchen/home/"> Dr. Jingyi "Ann" Chen's group</a>
+                      at the University of Texas at Austin, expected to graduate by May 2023.</p>
                 </div>
-                <div class="intro-right">
-                  <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
-                  <img src="img/home-img-2.jpg" alt="Image" class="img-fluid intro-img-2">
+                <div class="me-img">
+                  <img src="img/daxue2.JPG" alt="Image" class="img-fluid intro-img-2">
                 </div>
                 <div class="circle intro-circle-1"></div>
                 <div class="circle intro-circle-2"></div>
@@ -134,7 +137,7 @@ https://templatemo.com/tm-560-astro-motion
                     </p>
                   </div>
                   <div class="me-img">
-                    <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
+                    <img src="img/nanjing1.jpeg" alt="Image" class="img-fluid intro-img-1">
                   </div>
                   <div class="circle intro-circle-1"></div>
                   <div class="circle intro-circle-2"></div>
@@ -153,7 +156,7 @@ https://templatemo.com/tm-560-astro-motion
                 </p>
               </div>
               <div class="me-img">
-                <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
+                <img src="img/ertong1.jpg" alt="Image" class="img-fluid intro-img-1">
               </div>
         </div>
         <div class="d-flex position-relative tm-border-top-noline tm-border-bottom intro-container page-margin-1">
@@ -163,14 +166,16 @@ https://templatemo.com/tm-560-astro-motion
               I went to Hong Kong for my undergraduate study majoring in Earth System Science. It was like a dream come true. I was eager to learn all aspects of the Earth System, from the atmosphere to the lithosphere, and explore various research methods, from fieldwork to numerical modeling. I gradually developed an interest in geological and geophysical studies and took courses on earth surface processes, hydrology, and remote sensing.
             </p>
             <p class="mb-4">
-              I joint Professor Lin Liu's research group in my third year. Under his supervision, I started to learn about and utilize Interferometry Synthetic Aperture Radar (InSAR) for my final year project. I explored the possibility of using InSAR to monitor land subsidence in urban areas, mainly from groundwater extraction. 
+              I joint 
+              <a href="https://cryocuhk.github.io/team/">Professor Lin Liu's research group</a>
+              in my third year. Under his supervision, I started to learn about and utilize Interferometry Synthetic Aperture Radar (InSAR) for my final year project. I explored the possibility of using InSAR to monitor land subsidence in urban areas, mainly from groundwater extraction. 
             </p>
             <p class="mb-0">
               I was astonished by the beauty of the fringes in interferograms. I was also surprised how remote sensing can monitor large-scale surface changes without extensive fieldwork. This was when I decided to learn more about InSAR and its applications, and the experience led me to where I am now.
             </p>
           </div>
           <div class="me-img">
-            <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
+            <img src="img/daxue1.jpeg" alt="Image" class="img-fluid intro-img-1">
           </div>
           <div class="circle intro-circle-3"></div>
           <div class="circle intro-circle-4"></div>
@@ -273,7 +278,9 @@ https://templatemo.com/tm-560-astro-motion
                   I am a radar scientist with an Earth System Science background. I use remote sensing techniques to study natural and anthropogenic earth surface processes that trigger large-scale surface deformation, such as water and oil exploitation, permafrost dynamics, earthquakes, landslides, and volcano activities.
                 </p>
                 <p class="mb-0">
-                  In particular, my interest lies in using the space-borne Interferometric Synthetic Aperture Radar (InSAR) to contribute to a better understanding of Earth's surface processes, including:
+                  In particular, my interest lies in using the 
+                  <a href="https://www.usgs.gov/programs/VHP/insar-satellite-based-technique-captures-overall-deformation-picture">space-borne Interferometric Synthetic Aperture Radar (InSAR)</a>
+                   to contribute to a better understanding of Earth's surface processes, including:
                 </p> 
                 <p class="mb-0">
                   - Integrate InSAR results with other near-surface geophysical measurements to produce regional estimates.
@@ -312,7 +319,13 @@ https://templatemo.com/tm-560-astro-motion
                   Wu, Y., J. Chen, M. O'Connor, S. Ferencz, M. Cardenas and G. Kling (manuscript in preparation). The uncertainty in InSAR-based active layer soil water storage estimates over the Arctic Foothills.
                 </p>
                 <p class="mb-4">
-                  Chen, J., Y. Wu, M. O'Connor, M. Cardenas, K. Schaefer, R. Michaelides and G. Kling (2020). Active layer freeze-thaw and water storage dynamics in permafrost environments inferred from InSAR. Remote Sensing of Environment, 248, 112007. doi: 10.1016/j.rse.2020.112007.
+                  Chen, J., Y. Wu, M. O'Connor, M. Cardenas, K. Schaefer, R. Michaelides and G. Kling (2020). 
+                  <a href="https://www.sciencedirect.com/science/article/pii/S0034425720303771">Active layer freeze-thaw and water storage dynamics in permafrost environments inferred from InSAR.</a>
+                   Remote Sensing of Environment, 248, 112007. doi: 10.1016/j.rse.2020.112007.
+                </p>
+                <p class="mb-4">
+                  Relative news:
+                  <a href="https://www.ae.utexas.edu/news/mapping-arctic-tundra-from-above">Mapping Arctic tundra.</a>
                 </p>
               </div>
             </div>
@@ -337,14 +350,16 @@ https://templatemo.com/tm-560-astro-motion
                   Wu, Y., J. Chen, M. O'Connor, G. Kling and M. Cardenas (in revision). Substantial stocks of seasonally-thawed soil organic carbon may determine near-term responses of the Arctic to climate change.
                 </p>
                 <p class="mb-4">
-                  O'Connor, M. T., M. B. Cardenas, S. B. Ferencz, Y. Wu, B. T. Neilson, J. Chen and G. W. Kling (2020). Empirical Models for Predicting Water and Heat Flow Properties of Permafrost Soils. Geophysical Research Letters, 47(11). doi:10.1029/2020gl087646
+                  O'Connor, M. T., M. B. Cardenas, S. B. Ferencz, Y. Wu, B. T. Neilson, J. Chen and G. W. Kling (2020). 
+                  <a href="https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2020GL087646">Empirical Models for Predicting Water and Heat Flow Properties of Permafrost Soils.</a>
+                   Geophysical Research Letters, 47(11). doi:10.1029/2020gl087646
                 </p>
               </div>
             </div>
-            <!-- <div class="research-container-wrapper left">
+            <div class="research-container-wrapper left">
               <div class="research-container left">
                 <div class="research-img left">
-                  <img src="img/seasonaldef_bg.png" alt="Image" class="img-fluid">
+                  <img src="img/gwproject.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="research-text left">
                   <h2 class="research-text-title">City Subsidence and Groundwater Extraction</h2>
@@ -353,7 +368,7 @@ https://templatemo.com/tm-560-astro-motion
                   </div> 
                 </div>
               </div>
-            </div> -->
+            </div>
           </li>
           <li data-page-no="4">
             <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
@@ -363,11 +378,11 @@ https://templatemo.com/tm-560-astro-motion
                   I always love to spend my time in my imaginary world, where I create my characters, think about their past, and imagine what happens to them while my life keeps going on.
                 </p>
                 <p class="mb-4">
-                  I utilize a wide range of RPG and simulation games as aids to help myself build my imaginary world. Here I am showing part of my creation. Introductions of more about the characters and the world are under construction.
+                  I utilize a wide range of RPG and simulation games as aids to help myself build my imaginary world. Here I am showing part of my creation. More details about the characters and the world are under construction.
                 </p>
               </div>
               <div class="me-img">
-                <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
+                <img src="img/house3_1.png" alt="Image" class="img-fluid intro-img-1">
               </div>
               <div class="circle intro-circle-1"></div>
               <div class="circle intro-circle-2"></div>
@@ -378,48 +393,35 @@ https://templatemo.com/tm-560-astro-motion
               <!-- Add your stories and images here.-->
               <div class="me-text tm-bg-dark">
                 <p class="mb-4">
-                  I was not trained for drawing/painting, but I sketch from time to time, primarily for my characters.
+                  I am a fan of traditional Chinese music. At the age of 11, I became an amateur Erhu instrumentalist at level 10 (the maximum level for an amateur Erhu instrumentalist). Although I finally chose to spend more of my time on science and research, my passion for traditional Chinese music never faded. The training I got enables me to create and appreciate the music wherever I go and provides me with confidence and courage when I am going through difficult times.
                 </p>
               </div>
               <div class="me-img">
-                <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
-              </div>
-              <div class="circle intro-circle-3"></div>
-              <div class="circle intro-circle-4"></div>
-            </div> 
-            <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
-              <!-- Add your stories and images here.-->
-              <div class="me-text tm-bg-dark">
-                <p class="mb-4">
-                  I am a fan of traditional Chinese music. At the age of 11, I became an amateur Erhu instrumentalist at level 10 (the maximum level for an amateur instrumentalist). Although I finally chose to spend more of my time on science and research, my passion for traditional Chinese music never faded. The training I got enables me to create and appreciate the music wherever I go and provides me with confidence and courage when I am going through difficult times.
-                </p>
-              </div>
-              <div class="me-img">
-                <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
+                <img src="img/erhu1.jpg" alt="Image" class="img-fluid intro-img-1">
               </div>
               <div class="circle intro-circle-3"></div>
               <div class="circle intro-circle-4"></div>
             </div>       
             <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
               <div class="me-text tm-bg-dark">
-                <p class="mb-0">
-                  Some of my other creations: 
+                <p class="mb-4">
+                  Other things I like to do:
                 </p>
                 <p class="mb-0">
-                  - Needle felting
-                </p> 
+                  - I was not trained for drawing/painting, but I sketch from time to time, primarily for my characters.
+                </p>
                 <p class="mb-0">
-                  - Paper star with wishes
-                </p> 
+                  - Needle felting.
+                </p>
               </div>
               <div class="me-img">
-                <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
+                <img src="img/yangmao1.jpeg" alt="Image" class="img-fluid intro-img-1">
               </div>
               <div class="circle intro-circle-3"></div>
               <div class="circle intro-circle-4"></div>
             </div>  
           </li>
-          <li data-page-no="5">
+          <!-- <li data-page-no="5">
             <div class="page-margin-1">
               <div class="blog-item">
                 <div class="blog-title-wrapper">
@@ -439,7 +441,7 @@ https://templatemo.com/tm-560-astro-motion
               </div>
             </div>
 
-          </li>
+          </li> -->
         </ul>
     </div>
     <div class="container-fluid">
