--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ https://templatemo.com/tm-560-astro-motion
           <div class="col-xs-12">
             <div class="cd-slider-nav">
               <nav class="navbar navbar-expand-lg" id="tm-nav">
-                <a class="navbar-brand" href="#">Sophy Yue Wu</a>
+                <a class="navbar-brand" href="#">Sophy Yue Wu (吴越)</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-supported-content" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -156,7 +156,7 @@ https://templatemo.com/tm-560-astro-motion
                 </p>
               </div>
               <div class="me-img">
-                <img src="img/ertong1.jpg" alt="Image" class="img-fluid intro-img-1">
+                <img src="img/ertong1.JPG" alt="Image" class="img-fluid intro-img-1">
               </div>
         </div>
         <div class="d-flex position-relative tm-border-top-noline tm-border-bottom intro-container page-margin-1">
