--- a/index.html
+++ b/index.html
@@ -449,7 +449,10 @@ https://templatemo.com/tm-560-astro-motion
         <div class="col-md-6 px0">
           <ul class="list-contact page-left">
             <li>Contact</li>
-            <li>Email: sophywu@utexas.edu</li>
+            <li>
+              Email: 
+              <a href="mailto:sophywu@utexas.edu">sophywu@utexas.edu</a>
+            </li>
             <li>Cell: 512-810-0958</li>
           </ul>
         </div>
