updated to version 1

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ https://templatemo.com/tm-560-astro-motion
                         <div class="circle"></div>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#0" data-no="4">Alternate Life</a>
+                        <a class="nav-link" href="#0" data-no="4">Field Experience</a>
                         <div class="circle"></div>
                       </li>
                       <!-- <li class="nav-item">
@@ -283,21 +283,24 @@ https://templatemo.com/tm-560-astro-motion
                    to contribute to a better understanding of Earth's surface processes, including:
                 </p> 
                 <p class="mb-0">
-                  - Integrate InSAR results with other near-surface geophysical measurements to produce regional estimates.
+                  - Integrate SAR data from multiple missions and combine InSAR observations with various near-surface geophysical methods to scale up surface property estimates.
                 </p> 
                 <p class="mb-0">
-                  - Improve InSAR data processing strategies so that the InSAR community can also be part of the open science. By that time, researchers who know little about InSAR processing strategies can also access freely-available, automatically-generated, high-coherence InSAR-observed results.
+                  - Automatically identify surface disturbances caused by global warming and anthropogenic disturbances using InSAR.
+                </p> 
+                <p class="mb-0">
+                  - As the recently launched and upcoming SAR missions exponentially improve the quantity and quality of SAR data, I am dedicated to developing and improving user-friendly InSAR products. This way, we can make remote sensing observations accessible to researchers from diverse backgrounds and contribute to various Earth Science studies. 
                 </p> 
               </div>
             </div>
-            <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
+            <!-- <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
               <div class="tm-bg-dark content-pad">
                 <h2 class="mb-4">Field Experience</h2>
                 <p class="mb-0">
                   My current work in the permafrost region requires regularly visiting our field sites in Alaska. Check here for details of my field experience.
                 </p> 
               </div>
-            </div>
+            </div> -->
             <div class="research-container-wrapper left">
               <div class="research-container left">
                 <!-- Add your research images and description-->
@@ -372,7 +375,82 @@ https://templatemo.com/tm-560-astro-motion
           </li>
           <li data-page-no="4">
             <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
-              <!-- Add your stories and images here.-->
+              <div class="tm-bg-dark">
+                <p class="field-text">
+                  2018 was the year I visited Alaska for the first time in my life. We stayed at Fairbanks for a few days to buy gear (and beers). After that, we drove up north to Toolik Field Station. We were a small group of 3 researchers in 2018. Mike and Stephen were graduate students in the Cardenas Hydrology Research Group at UT Austin, and I am from the Radar Interferometry Group, also at UT Austin. In 2019, with the two supervisors (Bayani and Ann) joining the campaign, we became a larger group of 5 researchers.
+                </p>
+                <div class="field-text">
+                  <img src="img/fw1819_1.png" alt="Image" class="img-fluid intro-img-1">
+                </div>
+                <p class="field-text">
+                  The Toolik Field Station locates in the continuous permafrost of the upper Kuparuk River Basin near Toolik Lake on the North Slope of Alaska. This region preserves the juxtaposition of two major permafrost soil types commonly found in the Northern Hemisphere: acidic soils on older glaciated surfaces and nonacidic soils on more recently glaciated surfaces. Because of this unique hydrogeologic setting, the Toolik area has a long history of research starting in 1975, with the NSF Arctic LTER (Long-Term Ecological Research) established at Toolik Lake in 1984. The availability of the long-term databases of many basic parameters of the permafrost system makes it an excellent site for studying how different soil types control hydrological dynamics and may change as the climate warms and permafrost thaws.
+                </p>
+                <div class="field-text">
+                  <img src="img/fw1819_2.png" alt="Image" class="img-fluid intro-img-1">
+                </div>
+                <p class="field-text">
+                  When we were at the field station, we lived in tents. A fascinating tradition is that the field station gives everyone a mug and asks us to put a nickname on it. When we were out for field work, we left our mugs to hang on the wall. There is a chance of meeting other species living in this area, such as moose, caribous, foxes, and bears. Most of the time, animals try not to have close contact with humans. However, we still brought bear sprays whenever we left the field station, although most of the researchers I asked told me they were unsure how to use the spray. We noted the location and time on the animal sighting board when we observed the animals. In this way, researchers who are studying the animals can go and visit, and researchers who are going to work in that region will be aware of any potential dangers.
+                </p>
+                <div class="field-text">
+                  <img src="img/fw1819_3.png" alt="Image" class="img-fluid intro-img-1">
+                </div>
+                <p class="field-text">
+                  For the fieldwork in 2018 (August 14 – August 25) and 2019 (July 25 – August 3), our key goals were: 
+                </p>
+                <p class="field-text">
+                  1. Understand more about the hydrological properties of the surface soil layer on top of the permafrost (active layer); 
+                </p>
+                <p class="field-text">
+                  2. Map soil stratigraphy and study how it changes with slope and land vegetation cover types; 
+                </p>
+                <p class="field-text">
+                  3. Calculate soil water content, study how it varies in space, and compare the result with InSAR-estimated soil water content. 
+                </p>
+                <p class="field-text">
+                  To achieve our goals, we planned to visit as many field sites as possible and collect soil core samples. During our field trips, most of the time, we went to sample sites on foot. It usually took us from 9 in the morning to 4-5 in the afternoon to visit 10-20 sample sites. At each sample site, we would dig one soil pit. The soil pit is about 20-20cm. We collected 1-4 soil core samples from each soil pit. The soil core samples weigh about a pound each. Sometimes when we could use the helicopter, we went to places far away to cover a larger area. We finally visited more than 200 field sites and collected more than 200 soil core samples. The field data was vital for proving that InSAR surface deformation estimates are directly related to the amount of soil water in the active layer, and led to a regional estimation of soil water storage map calculated from InSAR-observed surface deformation.
+                </p>
+                <div class="field-text">
+                  <img src="img/fw1819_4.png" alt="Image" class="img-fluid intro-img-1">
+                </div>
+                <p class="field-text">
+                  We were supposed to visit Toolik for the third time in 2020 if not affected by COVID. However, we postponed our plan and decided to return in 2022. Also, because the field station lacked medical service, researchers were required to quarantine at Fairbanks for 14 days before we could head north to the field station.
+                </p>
+                <p class="field-text">
+                  I became the field campaign's leader this time, with Ke and Neelarun being my groupmates. Ke is also from the Radar Interferometry Group, and Neel is from the Cardenas Hydrology Research Group. Although they were both first-time visitors to Alaska, they were curious and hard-working while we were in the field.
+                </p>
+                <div class="field-text">
+                  <img src="img/fw22_1.png" alt="Image" class="img-fluid intro-img-1">
+                </div>
+                <p class="field-text">
+                  Although we only had five days at the field station, we had multiple goals this year:
+                </p>
+                <p class="field-text">
+                  1. Install permanently, fully-screened observation wells so the water table can be spot-checked intermittently throughout the thaw season;
+                </p>
+                <p class="field-text">
+                  2. Collect soil core and field measurements, including thaw depth (ice table), saturated thickness (water table), stratigraphy, and hydraulic conductivity;
+                </p>
+                <p class="field-text">
+                  3. Visit the 2007 Anaktuvuk River Fire Scar and conduct soil core sampling and field measurements.
+                </p>
+                <p class="field-text">
+                  The weather was terrible, chilly, rainy, and foggy while we were there. But the group managed to overcome all these. During this field campaign, we visited the fire scar for the first time and observed very different soil profiles from what we saw before near Toolik Lake. We also improved protocols for installing piezometers into the permafrost. We installed 32 wells in the Tussock Watershed thaw grid and the Imnavait thaw grid as planned (thanks to George, Jason, and their group members). Hopefully, the wells will provide us with long-term groundwater level monitoring. We visited a total of 46 field sites and collected 30 soil core samples from Tussock Watershed, Imnavait Watershed, and the 2007 Anaktuvuk River Fire Scar. Our field sites spread from the hillslope to the riparian zone, tracing the sub-ground water tracks. The field sites also covered various land vegetation cover types. We are looking forward to the exciting results of this year's field campaign.
+                </p>
+                <div class="field-text">
+                  <img src="img/fw22_2.png" alt="Image" class="img-fluid intro-img-1">
+                </div>
+                <div class="circle intro-circle-1"></div>
+                <div class="circle intro-circle-2"></div>
+                <div class="circle intro-circle-3"></div>
+                <div class="circle intro-circle-4"></div>
+              </div>
+              <!-- <div class="me-img">
+                <img src="img/house3_1.png" alt="Image" class="img-fluid intro-img-1">
+              </div> -->
+            </div>
+          </li> 
+          <!-- <li data-page-no="4">
+            <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
               <div class="me-text tm-bg-dark">
                 <p class="mb-4">
                   I always love to spend my time in my imaginary world, where I create my characters, think about their past, and imagine what happens to them while my life keeps going on.
@@ -390,7 +468,6 @@ https://templatemo.com/tm-560-astro-motion
               <div class="circle intro-circle-4"></div>
             </div>
             <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
-              <!-- Add your stories and images here.-->
               <div class="me-text tm-bg-dark">
                 <p class="mb-4">
                   I am a fan of traditional Chinese music. At the age of 11, I became an amateur Erhu instrumentalist at level 10 (the maximum level for an amateur Erhu instrumentalist). Although I finally chose to spend more of my time on science and research, my passion for traditional Chinese music never faded. The training I got enables me to create and appreciate the music wherever I go and provides me with confidence and courage when I am going through difficult times.
@@ -420,7 +497,7 @@ https://templatemo.com/tm-560-astro-motion
               <div class="circle intro-circle-3"></div>
               <div class="circle intro-circle-4"></div>
             </div>  
-          </li>
+          </li> -->
           <!-- <li data-page-no="5">
             <div class="page-margin-1">
               <div class="blog-item">
