--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ https://templatemo.com/tm-560-astro-motion
                   <h2 class="mb-4">Hi! Welcome to my personal website</h2>
                   <p class="mb-4">
                     I am Sophy Yue Wu.
-                    <a href="/Users/administrator/Documents/GitHub/ak2325.github.io/assets/WU_Yue_CV.pdf"> [CV] </a>
+                    <a href="assets/WU_Yue_CV.pdf"> [CV] </a>
                   </p>
                   <p class="mb-4">
                     I am a radar scientist with an Earth System Science background.</p>
